--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
@@ -19,7 +20,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.476.0",
-    "next": "15.1.7",
+    "next": "^15.2.0",
+    "next-themes": "^0.4.4",
     "openai": "^4.85.3",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
@@ -35,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
